--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -158,8 +158,7 @@
     "config = CONFIGS[\"ViT-B_16\"]\n",
     "model = VisionTransformer(config, num_classes=10, zero_head=False, img_size=224, vis=False).to(device)\n",
     "checkpoint = torch.load(checkpoint_path)\n",
-    "model.load_state_dict(checkpoint)\n",
-    "model.eval()"
+    "model.load_state_dict(checkpoint)\n"
    ]
   },
   {
@@ -177,8 +176,9 @@
     }
    ],
    "source": [
-    "global_acc = 0\n",
+    "model.eval()\n",
     "\n",
+    "global_acc = 0\n",
     "for idx, batch in enumerate(test_dataloader):\n",
     "    with torch.no_grad():\n",
     "        images, labels = batch\n",
