--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -5,7 +5,16 @@
    "execution_count": 1,
    "id": "4024a41c-f2ce-4321-a70a-03a38c237c07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lavs/micromamba/envs/VIT/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -19,7 +28,8 @@
     "from torch.utils.data import DataLoader, SequentialSampler\n",
     "import pickle\n",
     "\n",
-    "from models.modeling import VisionTransformer, CONFIGS"
+    "import models.modeling as original\n",
+    "import models.modeling_bitlinear as binary\n"
    ]
   },
   {
@@ -68,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "1f97f427-3d3f-402c-8db1-d5c1ba2acbd4",
    "metadata": {},
    "outputs": [
@@ -95,13 +105,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Base model used as starting point\n",
     "#urlretrieve(\"https://storage.googleapis.com/vit_models/imagenet21k%2Bimagenet2012/ViT-B_16-224.npz\", \"attention_data/ViT-B_16.npz\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "57d1b07c",
+   "metadata": {},
+   "source": [
+    "## Evluating Test Accuracy of Trained Models\n",
+    "\n",
+    "+ Model weights and training logs can be found [here](https://drive.google.com/drive/u/2/folders/1o6YwUx-lfn0kfxaYC3NJm3I4hEBYuy2n)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "1551f88e-ed1f-4b92-9b6f-8fecd5c3c306",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cuda'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# select device\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fcc1ec57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_model(model):\n",
+    "    model.eval()\n",
+    "    global_acc = 0\n",
+    "    for idx, batch in enumerate(test_dataloader):\n",
+    "        with torch.no_grad():\n",
+    "            images, labels = batch\n",
+    "            images = images.to(device)\n",
+    "            \n",
+    "            logits, _ = model(images)\n",
+    "\n",
+    "            for idx, image_logits in enumerate(logits):\n",
+    "                probs = torch.nn.Softmax(dim=-1)(image_logits)\n",
+    "                sorted_probs = torch.argsort(probs, dim=-1, descending=True)\n",
+    "                if cifar10_labels[b'label_names'][sorted_probs[0].item()] == cifar10_labels[b'label_names'][labels[idx].item()]:\n",
+    "                    global_acc += 1\n",
+    "                    \n",
+    "\n",
+    "    global_acc /= len(testset)\n",
+    "    print(global_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f0ae11ac",
    "metadata": {},
    "outputs": [
     {
@@ -141,60 +213,132 @@
        ")"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Prepare model\n",
-    "if (torch.cuda.is_available()):\n",
-    "    device = \"cuda\"\n",
-    "else:\n",
-    "    device = \"cpu\"\n",
-    "\n",
-    "checkpoint_path = \"output/test_checkpoint.bin\"\n",
-    "\n",
-    "config = CONFIGS[\"ViT-B_16\"]\n",
-    "model = VisionTransformer(config, num_classes=10, zero_head=False, img_size=224, vis=False).to(device)\n",
+    "# Baseline finetune run\n",
+    "checkpoint_path = \"output/baseline_checkpoint.bin\"\n",
+    "config = original.CONFIGS[\"ViT-B_16\"]\n",
+    "baseline_model = original.VisionTransformer(config, num_classes=10, zero_head=False, img_size=224, vis=False).to(device)\n",
     "checkpoint = torch.load(checkpoint_path)\n",
-    "model.load_state_dict(checkpoint)\n"
+    "baseline_model.load_state_dict(checkpoint)\n",
+    "\n",
+    "baseline_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "9e4fe48a-48e1-40cd-922c-dbeef73b68e8",
+   "execution_count": 9,
+   "id": "6ae1308a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9798\n"
+      "0.9904\n"
      ]
     }
    ],
    "source": [
-    "model.eval()\n",
+    "# CIFAR-10 Accuracy for baseline model\n",
+    "eval_model(baseline_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cf8ddc6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VisionTransformer(\n",
+      "  (transformer): Transformer(\n",
+      "    (embeddings): Embeddings(\n",
+      "      (patch_embeddings): Conv2d(3, 768, kernel_size=(16, 16), stride=(16, 16))\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (encoder): Encoder(\n",
+      "      (layer): ModuleList(\n",
+      "        (0-11): 12 x Block(\n",
+      "          (attention_norm): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "          (ffn_norm): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "          (ffn): Mlp(\n",
+      "            (fc1): BitLinear(in_features=768, out_features=3072, bias=True)\n",
+      "            (fc2): BitLinear(in_features=3072, out_features=768, bias=True)\n",
+      "            (dropout): Dropout(p=0.1, inplace=False)\n",
+      "          )\n",
+      "          (attn): Attention(\n",
+      "            (query): BitLinear(in_features=768, out_features=768, bias=True)\n",
+      "            (key): BitLinear(in_features=768, out_features=768, bias=True)\n",
+      "            (value): BitLinear(in_features=768, out_features=768, bias=True)\n",
+      "            (out): BitLinear(in_features=768, out_features=768, bias=True)\n",
+      "            (attn_dropout): Dropout(p=0.0, inplace=False)\n",
+      "            (proj_dropout): Dropout(p=0.0, inplace=False)\n",
+      "            (softmax): Softmax(dim=-1)\n",
+      "          )\n",
+      "        )\n",
+      "      )\n",
+      "      (encoder_norm): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (head): Linear(in_features=768, out_features=10, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Binarized Run 10,000 iterations\n",
+    "checkpoint_path = \"output/config1_checkpoint.bin\"\n",
+    "config = binary.CONFIGS[\"ViT-B_16\"]\n",
+    "bit_model1 = binary.VisionTransformer(config, num_classes=10, zero_head=False, img_size=224, vis=False).to(device)\n",
+    "checkpoint = torch.load(checkpoint_path)\n",
+    "bit_model1.load_state_dict(checkpoint)\n",
     "\n",
-    "global_acc = 0\n",
-    "for idx, batch in enumerate(test_dataloader):\n",
-    "    with torch.no_grad():\n",
-    "        images, labels = batch\n",
-    "        images = images.to(device)\n",
-    "        \n",
-    "        logits, _ = model(images)\n",
+    "print(bit_model1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cbb2074f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3636\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CIFAR-10 Accuracy for Binarized Run 10,000 iterations\n",
+    "eval_model(bit_model1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d7b4216d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Binarized Run 50,000 iterations\n",
+    "checkpoint_path = \"output/config2_checkpoint.bin\"\n",
+    "config = binary.CONFIGS[\"ViT-B_16\"]\n",
+    "bit_model2 = binary.VisionTransformer(config, num_classes=10, zero_head=False, img_size=224, vis=False).to(device)\n",
+    "checkpoint = torch.load(checkpoint_path)\n",
+    "bit_model2.load_state_dict(checkpoint)\n",
     "\n",
-    "        for idx, image_logits in enumerate(logits):\n",
-    "            probs = torch.nn.Softmax(dim=-1)(image_logits)\n",
-    "            sorted_probs = torch.argsort(probs, dim=-1, descending=True)\n",
-    "            if cifar10_labels[b'label_names'][sorted_probs[0].item()] == cifar10_labels[b'label_names'][labels[idx].item()]:\n",
-    "                global_acc += 1\n",
-    "                \n",
-    "\n",
-    "global_acc /= len(testset)\n",
-    "print(global_acc)"
+    "# CIFAR-10 Accuracy for Binarized Run 50,000 iterations\n",
+    "eval_model(bit_model2)"
    ]
   }
  ],
@@ -214,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
