quick tests on NBitLinear

--- a/n_bit_test.ipynb
+++ b/n_bit_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from models.modeling_nbitlinear import VisionTransformer, CONFIGS\n",
     "import torch\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from models.nbitlinear import NBitLinear, quant"
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -80,29 +81,26 @@
        ")"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# checkpoint_path = '/nfshomes/vla/scratch/ViT_pretrained_checkpoints/ViT-B_16.npz'\n",
-    "checkpoint_path = '../../scratch/ViT_pretrained_checkpoints/ViT-B_16.npz'\n",
+    "pretrained_path = '../../scratch/ViT_pretrained_checkpoints/ViT-B_16.npz'\n",
     "\n",
     "config = CONFIGS[\"ViT-B_16\"]\n",
     "config['weight_bits'] = 6\n",
     "config['activation_bits'] = 6\n",
     "\n",
     "model = VisionTransformer(config, num_classes=1000, zero_head=False, img_size=224, vis=False).to(device)\n",
-    "# checkpoint = torch.load(checkpoint_path)\n",
-    "model.load_from(np.load(checkpoint_path))\n",
-    "model.to(device)\n",
-    "# model.load_state_dict(checkpoint)"
+    "model.load_from(np.load(pretrained_path))\n",
+    "model.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +109,7 @@
        "6"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,10 +120,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.8774,  0.2180, -0.5615],\n",
+       "        [ 0.4135,  1.1958, -0.1727],\n",
+       "        [ 0.2647, -0.6527, -0.3241]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.randn(3,3)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.8774,  0.2211, -0.5596],\n",
+       "        [ 0.4143,  1.1958, -0.1695],\n",
+       "        [ 0.2672, -0.6527, -0.3238]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quant(x, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.8774,  0.2264, -0.5661],\n",
+       "        [ 0.4243,  1.1958, -0.1543],\n",
+       "        [ 0.2737, -0.6527, -0.3158]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quant(x, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.8774,  0.2507, -0.5014],\n",
+       "        [ 0.3417,  1.1958, -0.1708],\n",
+       "        [ 0.2797, -0.6527, -0.2797]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quant(x, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.8774,  0.0000, -0.8774],\n",
+       "        [ 0.0000,  1.1958, -0.0000],\n",
+       "        [ 0.0000, -0.6527, -0.0000]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quant(x, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "layer = NBitLinear(3,3, weight_bits=8, activation_bits=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.0944,  0.1014,  0.0266],\n",
+       "        [ 0.0121, -0.0106,  0.2019],\n",
+       "        [-0.1286,  0.1310, -0.1789]], grad_fn=<MmBackward0>)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layer.forward(x)"
+   ]
   }
  ],
  "metadata": {
