--- a/n_bit_test.ipynb
+++ b/n_bit_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,18 +120,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.8774,  0.2180, -0.5615],\n",
-       "        [ 0.4135,  1.1958, -0.1727],\n",
-       "        [ 0.2647, -0.6527, -0.3241]])"
+       "tensor([[ 0.3535,  1.9583,  1.9020],\n",
+       "        [ 1.0441,  1.5076, -0.2795],\n",
+       "        [-0.0162, -1.2250,  1.4357]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,18 +143,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.8774,  0.2211, -0.5596],\n",
-       "        [ 0.4143,  1.1958, -0.1695],\n",
-       "        [ 0.2672, -0.6527, -0.3238]])"
+       "tensor([1000., -400.,  200.,    0.])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.tensor([1000, -400, 200, 0]).type(torch.float32)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 999.9999, -401.5748,  196.8504,    0.0000])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from models.bitlinear import activation_quant\n",
+    "\n",
+    "activation_quant(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([127., -51.,  25.,   0.])"
+      ]
+     },
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,18 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.8774,  0.2264, -0.5661],\n",
-       "        [ 0.4243,  1.1958, -0.1543],\n",
-       "        [ 0.2737, -0.6527, -0.3158]])"
+       "tensor([ 31., -12.,   6.,   0.])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,18 +226,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.8774,  0.2507, -0.5014],\n",
-       "        [ 0.3417,  1.1958, -0.1708],\n",
-       "        [ 0.2797, -0.6527, -0.2797]])"
+       "tensor([ 296.7742, -400.0000,  206.4516,    0.0000])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quant(x, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 285.7143, -400.0000,  228.5714,    0.0000])"
+      ]
+     },
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,18 +266,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.8774,  0.0000, -0.8774],\n",
-       "        [ 0.0000,  1.1958, -0.0000],\n",
-       "        [ 0.0000, -0.6527, -0.0000]])"
+       "tensor([ 400., -400.,    0.,    0.])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
