fix model.eval() bug

--- a/imagenet_zeroshot.ipynb
+++ b/imagenet_zeroshot.ipynb
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wed Jun 12 18:35:19 2024       \n",
+      "Thu Jun 13 13:32:44 2024       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 550.78                 Driver Version: 550.78         CUDA Version: 12.4     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -63,8 +63,8 @@
       "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
-      "|   0  NVIDIA RTX A6000               Off |   00000000:01:00.0 Off |                  Off |\n",
-      "| 30%   29C    P8             22W /  300W |       1MiB /  49140MiB |      0%      Default |\n",
+      "|   0  NVIDIA RTX A6000               Off |   00000000:C1:00.0 Off |                  Off |\n",
+      "| 30%   31C    P8             16W /  300W |       1MiB /  49140MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "9468d902",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "ed294f36-bfa4-4090-a190-79679001eb4a",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "id": "272e90f3",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        ")"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "id": "e3053717",
    "metadata": {},
    "outputs": [],
@@ -208,17 +208,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "id": "e1212033-c84b-4260-ae8d-669fd40e5e82",
    "metadata": {},
    "outputs": [],
    "source": [
     "def eval_model(model):\n",
+    "    \n",
+    "    model.eval()\n",
+    "    \n",
     "    global_acc = 0\n",
     "    with torch.no_grad():\n",
     "        for i, (images, labels) in enumerate(imagenet_loader):\n",
     "            images = images.to(device)\n",
     "            logits, _ = model(images)\n",
+    "            # logits = model(images)\n",
+    "            \n",
     "\n",
     "            for idx, image_logits in enumerate(logits):\n",
     "                probs = torch.nn.Softmax(dim=-1)(image_logits)\n",
@@ -226,22 +231,23 @@
     "                        \n",
     "                y_hat_index = sorted_probs[0].item()\n",
     "                y_hat = imagenet_labels[y_hat_index]\n",
-    "                        \n",
+    "                \n",
     "                y_index = labels[idx].item()\n",
     "                y = imagenet_labels[y_index]\n",
     "                        \n",
     "                if y_hat == y:\n",
     "                    global_acc += 1\n",
-    "\n",
+    "                \n",
     "    global_acc /= len(imagenet_loader.dataset)\n",
     "    print(f\"acc: {global_acc}\")\n",
+    "    torch.cuda.empty_cache()\n",
     "    \n",
     "    return global_acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "id": "78b53730",
    "metadata": {},
    "outputs": [],
@@ -259,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "id": "cbc7715b-84c6-469a-b94e-270f22f310e9",
    "metadata": {},
    "outputs": [
@@ -300,7 +306,7 @@
        ")"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 45,
    "id": "457d15da",
    "metadata": {},
    "outputs": [
@@ -325,26 +331,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "acc: 0.70924\n",
-      "Top-1 acc:0.70924\n"
+      "acc: 0.75664\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[('Baseline', 0.70924)]"
+       "[('Baseline', 0.75664)]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# NOTE: vit-b_16-224 run\n",
-    "\n",
     "acc = eval_model(baseline_model)\n",
     "gather.append(('Baseline', acc))\n",
+    "gather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bbf9d58d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load_pretrained: grid-size from 24 to 14\n",
+      "acc: 0.69462\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('Baseline-vit-b_16', 0.69462)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pretrained_path = '/fs/nexus-scratch/vla/ViT_pretrained_checkpoints/ViT-B_16.npz'\n",
+    "config = full_precision.CONFIGS[\"ViT-B_16\"]\n",
+    "\n",
+    "baseline_model = full_precision.VisionTransformer(config, num_classes=1000, zero_head=False, img_size=224, vis=False).to(device)\n",
+    "baseline_model.load_from(np.load(pretrained_path))\n",
+    "baseline_model.to(device)\n",
+    "\n",
+    "# NOTE: vit-b_16 run\n",
+    "acc = eval_model(baseline_model)\n",
+    "gather.append(('Baseline-vit-b_16', acc))\n",
+    "gather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a9e5efc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision.models import vit_b_16, ViT_B_16_Weights\n",
+    "pytorch_vit = vit_b_16(ViT_B_16_Weights)\n",
+    "pytorch_vit.to(device)\n",
+    "pytorch_vit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "cacf0b06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "acc: 0.81068\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('pytorch-vit', 0.81068)]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# NOTE: pytorch vit run\n",
+    "acc = eval_model(pytorch_vit)\n",
+    "gather.append(('pytorch-vit', acc))\n",
     "gather"
    ]
   },
