small markdown edit

--- a/imagenet_zeroshot.ipynb
+++ b/imagenet_zeroshot.ipynb
@@ -441,7 +441,7 @@
    "metadata": {},
    "source": [
     "## Quantized Models (PTQ)\n",
-    "- NOTE: looks like this isn't quite appropriate for PTQ which typically requires calibration or something to keep track of running activation stats"
+    "- NOTE: using minmax quantization with pytorch \"observer\" modules to record stats, need to debug..."
    ]
   },
   {
