--- a/imagenet_zeroshot.ipynb
+++ b/imagenet_zeroshot.ipynb
@@ -441,7 +441,7 @@
    "metadata": {},
    "source": [
     "## Quantized Models (PTQ)\n",
-    "- NOTE: using minmax quantization with pytorch \"observer\" modules to record stats, need to debug..."
+    "- NOTE: using minmax quantization with custom nn.Linear replacement [NBitLinearDynamic](./models/nbitlineardynamic.py)"
    ]
   },
   {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "4a3b3c2f",
    "metadata": {},
    "outputs": [
@@ -486,39 +486,15 @@
        "          (attention_norm): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
        "          (ffn_norm): LayerNorm((768,), eps=1e-06, elementwise_affine=True)\n",
        "          (ffn): Mlp(\n",
-       "            (fc1): NBitLinearDynamic(\n",
-       "              in_features=768, out_features=3072, bias=True\n",
-       "              (weight_observer): MinMaxObserver(min_val=inf, max_val=-inf)\n",
-       "              (activation_observer): MovingAverageMinMaxObserver(min_val=inf, max_val=-inf)\n",
-       "            )\n",
-       "            (fc2): NBitLinearDynamic(\n",
-       "              in_features=3072, out_features=768, bias=True\n",
-       "              (weight_observer): MinMaxObserver(min_val=inf, max_val=-inf)\n",
-       "              (activation_observer): MovingAverageMinMaxObserver(min_val=inf, max_val=-inf)\n",
-       "            )\n",
+       "            (fc1): NBitLinearDynamic(in_features=768, out_features=3072, bias=True)\n",
+       "            (fc2): NBitLinearDynamic(in_features=3072, out_features=768, bias=True)\n",
        "            (dropout): Dropout(p=0.1, inplace=False)\n",
        "          )\n",
        "          (attn): Attention(\n",
-       "            (query): NBitLinearDynamic(\n",
-       "              in_features=768, out_features=768, bias=True\n",
-       "              (weight_observer): MinMaxObserver(min_val=inf, max_val=-inf)\n",
-       "              (activation_observer): MovingAverageMinMaxObserver(min_val=inf, max_val=-inf)\n",
-       "            )\n",
-       "            (key): NBitLinearDynamic(\n",
-       "              in_features=768, out_features=768, bias=True\n",
-       "              (weight_observer): MinMaxObserver(min_val=inf, max_val=-inf)\n",
-       "              (activation_observer): MovingAverageMinMaxObserver(min_val=inf, max_val=-inf)\n",
-       "            )\n",
-       "            (value): NBitLinearDynamic(\n",
-       "              in_features=768, out_features=768, bias=True\n",
-       "              (weight_observer): MinMaxObserver(min_val=inf, max_val=-inf)\n",
-       "              (activation_observer): MovingAverageMinMaxObserver(min_val=inf, max_val=-inf)\n",
-       "            )\n",
-       "            (out): NBitLinearDynamic(\n",
-       "              in_features=768, out_features=768, bias=True\n",
-       "              (weight_observer): MinMaxObserver(min_val=inf, max_val=-inf)\n",
-       "              (activation_observer): MovingAverageMinMaxObserver(min_val=inf, max_val=-inf)\n",
-       "            )\n",
+       "            (query): NBitLinearDynamic(in_features=768, out_features=768, bias=True)\n",
+       "            (key): NBitLinearDynamic(in_features=768, out_features=768, bias=True)\n",
+       "            (value): NBitLinearDynamic(in_features=768, out_features=768, bias=True)\n",
+       "            (out): NBitLinearDynamic(in_features=768, out_features=768, bias=True)\n",
        "            (attn_dropout): Dropout(p=0.0, inplace=False)\n",
        "            (proj_dropout): Dropout(p=0.0, inplace=False)\n",
        "            (softmax): Softmax(dim=-1)\n",
@@ -532,7 +508,7 @@
        ")"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,8 +520,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f0d4830d",
+   "metadata": {},
+   "source": [
+    "acc: 0.55758"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "fc977132",
    "metadata": {},
    "outputs": [
@@ -623,6 +607,16 @@
     "model = load_quant_model(2,2)\n",
     "acc = eval_model(model)\n",
     "gather.append(('2-bit', acc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0403c0ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: plots"
    ]
   },
   {
