--- a/imagenet_zeroshot.ipynb
+++ b/imagenet_zeroshot.ipynb
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "id": "4a3b3c2f",
    "metadata": {},
    "outputs": [
@@ -508,23 +508,34 @@
        ")"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 8-bit run\n",
-    "model = load_quant_model(8,8)\n",
+    "model = load_quant_model(16,16)\n",
     "model"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f0d4830d",
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "9da1699a",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "acc: 0.55744\n"
+     ]
+    }
+   ],
    "source": [
-    "acc: 0.55758"
+    "# 16-bit run\n",
+    "acc = eval_model(model)\n",
+    "gather.append(('16-bit', acc))"
    ]
   },
   {
@@ -542,6 +553,8 @@
     }
    ],
    "source": [
+    "# 8-bit run\n",
+    "model = load_quant_model(8,8)\n",
     "acc = eval_model(model)\n",
     "gather.append(('8-bit', acc))"
    ]
